<resources>
    <string name="app_name">HaVagas</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="e_mail">E-mail</string>
    <string name="check_emails">Receber e-mails com atualizações de oportunidades</string>
    <string name="comercial">Comercial</string>
    <string name="residencial">Residencial</string>
    <string name="telefone">Telefone: (16)3375-7514</string>
    <string name="addTelCell">Adicionar telefone celular</string>
    <string name="telCel">Celular: +55 (16) 99768-2147</string>
    <string name="maculino">Maculino</string>
    <string name="feminino">Feminino</string>
    <string name="sexo">Sexo</string>
    <string name="dataNascimento">Data de nascimento</string>
    <string name="formacao">Formação</string>
    <string name="ano_de_formatura">Ex: 17/12/2019</string>
    <string name="txtAnoFormatura">Ano de formatura</string>
    <string name="txtanoConclusao">Ano de Conclusão</string>
    <string name="instituicao">Instituição</string>
    <string name="tituloMonografia">Título de monografia</string>
    <string name="orientador">Orientador</string>
    <string name="vagas_de_interesse">Vagas de interesse</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string-array name="formacao">
        <item>Fundamental</item>
        <item>Médio</item>
        <item>Graduação</item>
        <item>Especialização</item>
        <item>Mestrado</item>
        <item>Doutorado</item>
    </string-array>
</resources>